[package]
name = "learntorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.9"
reqwest = { version = "0.11" }
bytes = "1.1"
flume = "0.10"
futures = "0.3"
futures-util = "0.3"
sha-1 = "0.10.0"
urlencoding = "2.1.0"
rand = "0.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
