[package]
name = "learntorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = [
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "fs",
    "signal",
] }

tokio-util = "0.6.9"
reqwest = "0.11.9"
urlencoding = "2.1.0"
bytes = "1.1.0"
flume = "0.10.10"
futures = "0.3.19"
futures-util = "0.3.19"
sha-1 = "0.10.0"
rand = "0.8.4"

thiserror = "1.0.30"
eyre = "0.6.6"

tracing = "0.1.29"
tracing-subscriber = "0.3.6"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.5.2"
libc = "0.2.114"

[profile.release]
debug = true
